# tnp

./: README.md
assessment_interfaces/: CMakeLists.txt  package.xml
assessment_interfaces/srv/: ColorBoxDetection.srv  DriveDistance.srv  RotateAngle.srv
assessment_packages/: CMakeLists.txt  package.xml
assessment_packages/launch/: assessment_simulation.launch.py
assessment_packages/src/: drive_distance.cpp  rotate_angle.cpp
b1_01_john_artc/: package.xml  setup.cfg  setup.py
b1_01_john_artc/b1_01_john_artc/: aruco_navigation.py  task.py  task1.py  task1_student_copy.py  task2.py  task_student_copy.py
b1_01_john_artc/launch/: demo.launch.py  robot_tasks.launch.py
ros2_aruco/: README.md
ros2_aruco/ros2_aruco/: package.xml  setup.py
ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/ros2_aruco/models/aruco_visual_marker/: model.config  model.sdf
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_generate_marker.py  aruco_node.py
ros2_aruco/ros2_aruco_interfaces/: package.xml
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_track.launch.py
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker_0/: model.config
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker_1/: model.config
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker_2/: model.config
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker_3/: model.config
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger_cam/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_track.world
(+2 files in other folders)
